--- a/src/index.scss
+++ b/src/index.scss
@@ -139,11 +139,13 @@
             height: 62px;
             box-shadow: 0px -1px 0px 0px #C4C4C4 inset;
         }
-        td {
-            padding-right: 30px;
-        }
-        td:last-child {
-            padding-right: 0px;
+        @media (min-width: 1280px) {
+            td {
+                padding-right: 30px;
+            }
+            td:last-child {
+                padding-right: 0px;
+            }
         }
     }
     .mytable {
